# Neuro-Moodle-LLM

./: .dockerignore  .env.example  .gitignore  Dockerfile.moodle  Dockerfile.neuro  Dockerfile.streamlit  README.md  docker-compose.yml  instructions.txt  pyproject.toml
audit-reports/: 2026-05-09-neuro-moodle-llm-audit.md  README.md
data/eval/: champion.json  golden.example.jsonl  golden_synthetic_92242.jsonl  quiz_eval_meta_8.json
data/feedback/: thumbs.jsonl
data/monitoring/: 1778385586.json  quiz_eval_6.json
docker/: _simulate_quiz_attempt.php  apache-moodle.conf  bootstrap-webservice.php  docker-entrypoint-moodle.sh  php-moodle.ini
docs/: Connecting_Moodle_to_private_local_AI.m4a  SYNTHETIC_COURSES.md  SYNTHETIC_COURSES_WALKTHROUGH.md  index.html  neuro-theme.css
infra/azure/: .gitignore  .terraform.lock.hcl  README.md  deploy.sh  main.tf  outputs.tf  variables.tf
ml-enhancement-reviews/: 2026-05-09-neuro-moodle-llm-ml-enhancements.md  IMPLEMENTATION-MAP.md  README.md
moodle_plugins/neurollm/: index.php  lib.php  settings.php  version.php
roadmap/: 2026-05-09-strategic-improvements-plan.md  README.md
scripts/: docker-run.sh  test-enhancements.sh
src/neuro_moodle_llm/: __init__.py  agents.py  bandits.py  chunker.py  cli.py  config.py  dpo.py  embedding_cache.py  eval.py  events.py  feedback.py  health.py  hpo.py  ingest.py  lineage.py  memory.py  monitoring.py  moodle.py  moodle_authoring.py  multimodal.py  ollama.py  qa_cache.py  quiz_eval.py  rag.py  registry.py  reranker.py  retrieval.py  symbolic.py  synthetic.py  (+3 more)
streamlit_app/: Home.py
(+23 files in other folders)
