[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-moodle-llm"
version = "0.1.0"
description = "Python integration layer for Moodle, Qdrant, and Ollama"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27,<1",
    "qdrant-client>=1.12,<2",
    "pydantic-settings>=2.6,<3",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pypdf>=5.0,<6",
    "pytest>=8.3,<9",
    "eval-type-backport>=0.2.0,<1; python_version < \"3.10\"",
]

[project.optional-dependencies]
math = ["sympy>=1.13,<2"]
hpo = ["optuna>=4.0,<5"]
audio = ["faster-whisper>=1.0,<2"]
dev = ["ruff>=0.8", "pytest>=8.3,<9"]

[project.scripts]
neuro-moodle-llm = "neuro_moodle_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
